--- a/usdivad/tallyho.html
+++ b/usdivad/tallyho.html
@@ -29,6 +29,19 @@
 		stroke-width: 6;
 	}
 
+
+
+
+	.node {
+	  stroke: #fff;
+	  stroke-width: 1.5px;
+	}
+
+	.link {
+	  stroke: #999;
+	  stroke-opacity: .6;
+	}
+
 </style>
 <html>
 <title>Tally ho!</title>
@@ -41,249 +54,17 @@
 	<div id="results"></div>
 <script src="lib/jquery-1.10.2.min.js"></script>
 <script src="lib/d3.v3.min.js"></script>
+
+<script src="tally.js"></script>
+<script src="visualize.js"></script>
 <script>
-	//Tally ho!
-	function tally() {
-		
-		//Get the logged data
-		$.get("collected_data.txt", function(data) {
-			var tally_obj = {};
-			var tally_arr = [];
-			var lines = data.split("\n");
-			var total = 0;
-			var out = "";
-
-			//Counting frequency of each rapper
-			for (var i in lines) {
-				var line = lines[i];
-				var name_arr = line.match(/^(.+?(?= from))/);
-				var name = "";
-				if (name_arr != null) { //use null, not undefined check
-					//console.log(line);
-					//console.log(name_arr[0]);
-					name = name_arr[0];
-					if (typeof tally_obj[name] == "undefined") {
-						tally_obj[name] = 1;
-					}
-					else {
-						tally_obj[name]++;
-					}
-					total++;
-				}
-			}
-
-			//Construct and sort an array of name-count pairs
-			//Objects look like {"name":"DJ Dog Dick", "count":"666"}
-			for (key in tally_obj) {
-				obj = {};
-				obj["name"] = key;
-				obj["count"] = tally_obj[key];
-				obj["percent"] = (obj["count"]/total)*100; //Now that we have the total we can compute %s
-				//console.log(obj);
-				tally_arr.push(obj);
-			}
-			tally_arr.sort(function(x, y) {
-				var xc = x["count"];
-				var yc = y["count"];
-				if (xc < yc) { //descending
-					return 1;
-				}
-				else if (xc == yc) {
-					return 0;
-				}
-				else {
-					return -1;
-				}
-			});
-
-			//Print results
-			out += "Total results: " + total + "<br><br>";
-			//out += to_s(tally_arr, total);
-			$("#results").html(out);
-			//console.log(tally_obj);
-
-
-			//Create pie
-			visualize(tally_arr);
-
-		}); //end ajax
-	}
-
-	//
-	//t=tally_arr, n=total
-	function to_s(t, n) {
-		s = "";
-		for (var i in t) {
-			var name = t[i]["name"];
-			var count = t[i]["count"];
-			var percent = t[i]["percent"];
-			s += name + ": <b>" + count + "</b> (" + percent.toFixed(2) + "%)" + "<br>";
-		}
-		return s;
-	}
-
-	//D3 visualization
-	function visualize(arr) {
-		var radius = 250,
-			height = radius*2.5,
-			width = height;
-		var scale = d3.scale.linear()
-			.domain([0, arr[0].count]) //remember it's sorted
-			.range([height-100, 0]);
-
-		var count_arr = [];
-		for (var i in arr) {
-			count_arr.push(arr[i].count);
-		}
-
-		/*var color = d3.scale.ordinal()
-			.domain(d3.range(0,arr.length))
-			.range(["#98abc5", "#8a89a6", "#7b6888", "#6b486b", "#a05d56", "#d0743c", "#ff8c00"]);
-			//.range(["#000000", "#ffffff"]);
-		*/
-
-		var color = function(x) {
-			return "#d0743c";
-		}
-
-		var chart = d3.select(".chart")
-			.attr("height", height)
-			.attr("width", width)
-			.data([arr]) //quest
-			.append("g")
-				.attr("transform", "translate(" + radius*1.125 + "," + radius*1.125 + ")");
-
-		var arc = d3.svg.arc()
-			.outerRadius(radius - 10)
-			.innerRadius(0);
-
-		//For labels
-		var outer_arc = d3.svg.arc()
-			.outerRadius(radius+10)
-			.innerRadius(radius+10);
-
-		var pie = d3.layout.pie()
-			.sort(null)
-			.value(function(d) {return d.count;});
-
-		var arcs = chart.selectAll("g.slice")
-			.data(pie)
-			.enter()
-				.append("g")
-					.attr("class", "slice");
-
-			arcs.append("path")
-				.attr("d", arc)
-				.on("mouseover", function(d) {
-					var my_data = d;
-					var me = d3.select(this);
-					//var printed = false;
-					var idx = 0;
-					var centroid = outer_arc.centroid(my_data);
-					//console.log(centroid[0]);
-					me.style("fill", "#4682B4")
-						.style("opacity", "1");
-					arcs.append("text")
-						.attr("transform", function() {
-							return "translate(" + centroid + ")";
-						})
-						.attr("text-anchor", function() {
-							if (centroid[0] == "-") { //negative x value
-								return "end";
-							}
-							else {
-								return "start";
-							}
-						})
-						.style("fill", "black")
-						//.attr("z-index", "1000")
-						.text(function() {
-							//We only print the LAST one
-							if (idx == arr.length - 1) {
-								console.log("x");
-								var s = my_data.data.name
-									+ " (" + my_data.data.percent.toFixed(2) + "%)";
-								//printed = true;
-								return s;
-							}
-							else {
-								idx += 1;
-							}
-						});
-						console.log("save");
-				})
-				.on("mouseout", function(d) {
-					var me = d3.select(this);
-					var my_data = d;
-					me.style("fill", function(d) {return color(d.data.count);})
-						.style("opacity", function(d) {
-					return (d.data.percent * 15) / 100; //*15 cos 7's about the max, /100 because %
-				});
-					arcs.selectAll("text").remove(); 
-					//console.log(me.select("text"))
-				})
-				.style("fill", function(d,i) {
-					/*
-					//Random color
-					var color = "hsl(" + Math.random()*360 + ",20%,50%)";
-					console.log(color);
-					return color;
-					*/
-
-					//Scaled
-					console.log(color(d.data.count));
-					return color(d.data.count);
-				})
-				.style("opacity", function(d) {
-					return (d.data.percent * 15) / 100; //*15 cos 7's about the max, /100 because %
-				});
-
-			/*
-			arcs.append("text")
-				.attr("transform", function(d) {
-					return "translate(" + arc.centroid(d) + ")";
-				})
-				.attr("text-anchor", "middle")
-				.attr("fill", "white")
-				.text(function(d, i) {
-					var s = d.data.name
-						+ " (" + d.data.count + ")"
-					return s;
-				});
-			*/	
-
-
-		//chart.data()
-	}
-
-	function viz_test() {
-		var max = 100
-		var total = 0;
-		var arr = [
-			{"name":"Kendrick Lamar", "count":rand_int(max)},
-			{"name":"James Blake", "count":rand_int(max)},
-			{"name":"Kurt Vile", "count":rand_int(max)}
-		];
-		for (var i in arr) {
-			total += arr[i]["count"];
-		}
-		for (var i in arr) {
-			arr[i]["percent"] = 100*arr[i]["count"]/total;
-		}
-		visualize(arr);
-		console.log(arr);
-	}
-
-	function rand_int(n) {
-		return Math.floor(Math.random()*n);
-	}
-
+	
 	//Let's go
 	$(window).load(function() {
+		//visualize_links();
 		tally();
 		//viz_test();
 	});
-
 
 
 </script>
