minor width fixes

--- a/usdivad/forceconnections.html
+++ b/usdivad/forceconnections.html
@@ -41,6 +41,7 @@
     <div>
       Using a force-directed graph to visualize links between rapper personalities as defined by Zumic's <a href="http://zumic.com/rapper-personality-quiz/" target="_blank">Rapper Personality Quiz</a>.<br>
       Colors correspond to regional designations: <span class="designation" id="des1">East Coast</span>, <span class="designation" id="des2">Mid West</span>, <span class="designation" id="des3">Dirty South</span>, and <span class="designation" id="des4">West Coast</span>.
+      <br>MC Hammer sure is lonely!
       <!--<br>Hover over a node to see which rapper it represents!-->
     </div>
   </div>
