--- a/usdivad/tallyho.html
+++ b/usdivad/tallyho.html
@@ -30,7 +30,9 @@
 	}
 
 
-
+	#results {
+		margin-top: -75px;
+	}
 
 	.node {
 	  stroke: #fff;
@@ -48,7 +50,7 @@
 <body>
 	<div id="header">
 		<h1>Zumic Rapper Personality Quiz Statistics</h1>
-		<div>Data collection from a quiz I wrote and implemented for Zumic. Take the quiz <a href="http://zumic.com/rapper-personality-quiz/" target="_blank">here</a>!</div>
+		<div>Real-time data collection from a quiz I wrote and implemented for Zumic. Take the quiz <a href="http://zumic.com/rapper-personality-quiz/" target="_blank">here</a>!</div>
 	</div>
 	<svg class="chart"></svg>
 	<div id="results"></div>
