--- a/usdivad/forceconnections.html
+++ b/usdivad/forceconnections.html
@@ -39,7 +39,8 @@
   <div id="header">
     <h1>Links Between Rapper Personalities</h1>
     <div>
-      Using a force-directed graph to visualize links between rapper personalities as defined by Zumic's <a href="http://zumic.com/rapper-personality-quiz/" target="_blank">Rapper Personality Quiz</a>.<br>
+      Using a force-directed graph to visualize links between rapper personalities, calculated using data from Zumic's <a href="http://zumic.com/rapper-personality-quiz/" target="_blank">Rapper Personality Quiz</a>.<br>
+      Lengths correspond to Manhattan distances (for brevity, distances below a certain threshold are discarded).<br>
       Colors correspond to regional designations: <span class="designation" id="des1">East Coast</span>, <span class="designation" id="des2">Mid West</span>, <span class="designation" id="des3">Dirty South</span>, and <span class="designation" id="des4">West Coast</span>.
       <br>MC Hammer sure is lonely!
       <!--<br>Hover over a node to see which rapper it represents!-->
